force-app/main/default/objects/Time_Entry__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>TimeEntries</relationshipName>
    <type>Lookup</type>
</CustomField>