force-app/main/default/objects/Time_Entry__c/fields/Number_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours__c</fullName>
    <label>Number of Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>