force-app/main/default/objects/Time_Entry__c/fields/Task_Types__c.field-meta.xml
<CustomField>
    <fullName>Task_Types__c</fullName>
    <label>Task Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>