force-app/main/default/objects/Time_Entry__c/fields/Who__c.field-meta.xml
<CustomField>
    <fullName>Who__c</fullName>
    <label>Who</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>